# End2EndML_Pipeline_Project

./: README.md  app.py  requirements.txt  setup.py  template.py
artifacts/: raw.csv.dvc
mlproject/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml
mlproject/docs/: conf.py  installation.rst
mlproject/src/mlproject/: __init__.py
notebook/: 1 . EDA STUDENT PERFORMANCE (1).ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/data/: raw.csv
src/mlproject/: exception.py  logger.py  utils.py
src/mlproject/components/: data_ingestion.py  data_transformation.py  model_trainer.py
