[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlproject"
version = "0.0.1"
description = "basic end to end ML project"
readme = "README.rst"
authors = [
  {name = "Rajveer Jagtap", email = "rajveer77648@gmail.com"}
]
maintainers = [
  {name = "Rajveer Jagtap", email = "rajveer77648@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Rajveerjagtap/mlproject/issues"
changelog = "https://github.com/Rajveerjagtap/mlproject/blob/master/changelog.md"
homepage = "https://github.com/Rajveerjagtap/mlproject"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

